Update of Zen of SFMC article

--- a/docs/zen-of-sfmc.mdx
+++ b/docs/zen-of-sfmc.mdx
@@ -386,7 +386,9 @@ That's theory, but what are good business-oriented data points? Some examples I 
 - Date (useful especially if you are creating a lot of simillar assets for recurring goals)
 - Campaign Code (or whatever you are using for closed-loop reporting and 360 analytics)
 
-How does it translate for the final name? Let's check example: `UK_DEV_C_WEL_brand-welcome-1_EML_21-10_01234`
+How does it translate for the final name? Let's check example:
+
+`UK_DEV_C_WEL_brand-welcome-1_EML_21-10_01234`
 
 It's elements would be:
 
@@ -399,7 +401,9 @@ It's elements would be:
 7. Date: `21-10` = October 2021
 8. Campaign Code: `01234`
 
-As you can see, with under 50 characters we captured 8 different data points and quite good picture of the purpose of the asset. What is more, Business Intelligence team will be able to do a simple split by underscore to capture each element as separte category to enable filtering and grouping in reporting.
+As you can see, with under 50 characters we captured 8 different data points and quite good picture of the purpose of the asset.
+
+What is more, Business Intelligence team will be able to do a simple split by underscore to capture each element as separte category to enable filtering and grouping in reporting.
 
 </TabItem>
 </Tabs>
@@ -408,10 +412,16 @@ As you can see, with under 50 characters we captured 8 different data points and
 
 ### Special cases aren't special enough to break the rules. Although practicality beats purity.
 
+Those contradictory lines are following the ancient greek golden middle way philosophy. The thought behind them is quite straightforward. Whenever you decide to stick to some recommendation or rule (be it from this article or else) - fight the temptation to create exceptions to it when you encounter first bump on the road.
+
+Sure, it might be easier to ignore it when the deadline is near or you have too much to do. It's easy to say "I will align it later". But there is always more work to be done "later", and in the end you end up with a messy solution that doesn't provide the value promised by following the rules. However, following the rules to the book in every single case might be an overkill that stops you from delivering a working solution at all.
+
+That's why you must not only learn how to follow the rules, but also when to break them.
 
 ---
 
 ### Errors should never pass silently. Unless explicitly silenced.
+
 
 
 ---
